# ZPR_Gra-logiczna-z-drzewem-gry

./: .gitignore  CMakeLists.txt  README.md  config.py
docs/: Doxyfile
include/: BotMove.hpp  Config.hpp  Controller.hpp  Field.hpp  MessageQueues.hpp  Model.hpp  Queues.hpp  Utils.hpp  View.hpp
src/: BotMove.cpp  Config.cpp  Controller.cpp  Field.cpp  MessageQueues.cpp  Model.cpp  Queues.cpp  View.cpp  main.cpp
tests/: Tests.cpp  basicTest.cpp  test_config.py  worng_data_file_test_config.py
